fixed nav not showing once an image appear

--- a/src/Components/User/Register.css
+++ b/src/Components/User/Register.css
@@ -4,7 +4,7 @@
     box-shadow: grey 2px 2px 4px;
     width: 40vw;
     min-width: 300px;
-    margin: 20px auto;
+    margin: 8% auto 0%;
 }
 
 .content-register {
