--- a/src/Components/User/Signin.css
+++ b/src/Components/User/Signin.css
@@ -7,7 +7,7 @@
     box-shadow: grey 2px 2px 4px;
     width: 40vw;
     min-width: 300px;
-    margin: 0px auto;
+    margin: 9% auto 0%;
 }
 
 
