--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-html {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 body {
     font-family: 'comic sans ms', cursive, sans-serif;
     -webkit-font-smoothing: antialiased;
